# cnvx

./: .editorconfig  .gitattributes  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci-tests.yml  ci.yml  conventional-commit.yml  release.yml
bindings/python/: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
bindings/python/examples/: power.py
bindings/python/src/: lib.rs  lp.rs
bindings/python/src/cnvx/: __init__.py  __init__.pyi
bindings/python/src/cnvx/lp/: __init__.py  __init__.pyi
bindings/typst/: Cargo.toml  README.md  justfile
bindings/typst/examples/: cnvx.wasm  power.typ
bindings/typst/src/: lib.rs
crates/cnvx/: Cargo.toml
crates/cnvx-cli/: Cargo.toml  build.rs
crates/cnvx-cli/src/: args.rs  cli.rs  main.rs  solve.rs  style.rs  version.rs
crates/cnvx-cli/src/command/: run.rs
crates/cnvx-cli/src/lang/: gmpl.rs  mod.rs  mps.rs
crates/cnvx-core/: Cargo.toml
crates/cnvx-core/src/: constraint.rs  error.rs  expr.rs  lib.rs  model.rs  objective.rs  problem.rs  sense.rs  solution.rs  solver.rs  status.rs  var.rs
crates/cnvx-graph/: Cargo.toml
crates/cnvx-graph/src/graph/: adjacency.rs  mod.rs
crates/cnvx-graph/src/solve/sp/: mod.rs
crates/cnvx-lp/: Cargo.toml
crates/cnvx-lp/src/: auto.rs  dual_simplex.rs  lib.rs  lp_solver.rs  primal_simplex.rs  simplex.rs  validate.rs
crates/cnvx-lp/src/core/: constraint.rs  expr.rs  mod.rs  model.rs  objective.rs  solution.rs  solver.rs  var.rs
crates/cnvx-math/: Cargo.toml
crates/cnvx-math/src/: lib.rs
crates/cnvx-math/src/matrix/: dense.rs  mod.rs  sparse.rs
crates/cnvx-math/src/matrix/dense/: gauss_elim.rs  mod.rs
crates/cnvx-math/src/matrix/sparse/: cholesky.rs  mod.rs  qr.rs
crates/cnvx-network/: Cargo.toml
crates/cnvx-network/src/: lib.rs
crates/cnvx-network/src/graph/: mod.rs
crates/cnvx-network/src/solve/: mod.rs
crates/cnvx-network/src/solve/sp/: labelset.rs  pareto.rs
crates/cnvx-parse/: Cargo.toml
crates/cnvx-parse/src/: ampl.rs  gmpl.rs  lib.rs  mps.rs
crates/cnvx/examples/: cocktail.rs  power.rs
crates/cnvx/examples/lp/: cocktail.rs  power.rs
crates/cnvx/examples/network/: shortest_path.rs
crates/cnvx/src/: auto_solver.rs  lib.rs
examples/lp/: cocktail.rs  power.rs
src/: lib.rs
tests/: .gitignore  Cargo.toml  README.md
tests/src/: args.rs  netlib.rs  tests.rs
