[workspace]
members = ["crates/*", "tests"]
default-members = ["crates/cnvx-cli"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["chriso345"]
edition = "2024"
repository = "https://github.com/chriso345/cnvx"
license = "MIT"
keywords = ["optimization", "linear-programming", "convex"]
readme = "README.md"

[workspace.dependencies]
cnvx = { path = "crates/cnvx", version = "0.0.1" }
cnvx-cli = { path = "crates/cnvx-cli", version = "0.0.1" }
cnvx-core = { path = "crates/cnvx-core", version = "0.0.1" }
cnvx-lp = { path = "crates/cnvx-lp", version = "0.0.1" }
cnvx-math = { path = "crates/cnvx-math", version = "0.0.1" }
cnvx-parse = { path = "crates/cnvx-parse", version = "0.0.1" }
clap = { version = "4.5.57", features = ["derive"] }
nalgebra = "0.34.2"

[workspace.lints]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 0
overflow-checks = false
panic = "abort"
incremental = true
strip = true

[profile.test]
opt-level = 0
debug = 2
overflow-checks = true
incremental = true
