[package]
name = "cnvx-tests"
description = ""
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[[test]]
name = "tests"
path = "src/tests.rs"
harness = false

[dependencies]
cnvx = { workspace = true }
cnvx-core = { workspace = true }
cnvx-lp = { workspace = true }
cnvx-math = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking"] }

[lints]
workspace = true
