[package]
name = "cnvx-tests"
description = ""
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[[test]]
name = "tests"
path = "src/tests.rs"

[dependencies]
cnvx = { workspace = true }
cnvx-cli = { workspace = true }
cnvx-core = { workspace = true }
cnvx-lp = { workspace = true }
cnvx-math = { workspace = true }
cnvx-parse = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
tempfile = "3.24.0"
test-case = "3.3.1"

[lints]
workspace = true
