[package]
name = "cnvx-typst"
version = "0.0.1"
edition = { workspace = true }
description = "Typst WebAssembly bindings for the cnvx optimization library"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
publish = false

[lib]
name = "cnvx"
crate-type = ["cdylib"]
path = "src/lib.rs"
doc = false

[dependencies]
cnvx-lp = { workspace = true }
cnvx-math = { workspace = true }
cnvx-graph = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasm-minimal-protocol = "0.2.0"

[profile.release]
opt-level = "z"   # minimise WASM binary size
lto = true
codegen-units = 1
strip = true
