[package]
name = "cnvx-cli"
description = ""
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
cnvx = { workspace = true }

[lints]
workspace = true
