[package]
name = "cnvx-cli"
description = ""
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
cnvx = { workspace = true }
cnvx-core = { workspace = true }
cnvx-parse = { workspace = true }
cnvx-math = { workspace = true }
clap = { workspace = true, features = ["derive"] }
sigpipe = "0.1.3"

[lints]
workspace = true

[[bin]]
name = "cnvx"
path = "src/main.rs"
doc = false
