[package]
name = "cnvx-graph"
description = "graph and network optimization solvers for cnvx optimization library"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
cnvx-core = { workspace = true }

[lints]
workspace = true
