[package]
name = "cnvx-lp"
description = "linear programming solver for cnvx optimization library"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
cnvx-core = { workspace = true }
cnvx-math = { workspace = true }

[lints]
workspace = true
