[package]
name = "cnvx-math"
description = ""
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
nalgebra = { workspace = true }

[lints]
workspace = true
