[package]
name = "cnvx"
description = "Experimental linear optimization toolkit. The crate is currently a placeholder (v0.0.0) while the core architecture and APIs are developed."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[features]
default = ["lp"]
lp = ["cnvx-lp"]
# mop = ["lp", "cnvx-mop"]
# sat = ["cnvx-sat"]

[dependencies]
cnvx-core = { workspace = true }
cnvx-lp = { workspace = true, optional = true }

[lints]
workspace = true
