[package]
name = "cnvx"
description = "cnvx optimization library"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[features]
default = ["lp"]
lp = ["cnvx-lp"]
# mop = ["lp", "cnvx-mop"]
# sat = ["cnvx-sat"]

[dependencies]
cnvx-core = { workspace = true }
cnvx-lp = { workspace = true, optional = true }
cnvx-math = { workspace = true }

[lints]
workspace = true
